2017-11-25  Bruno Haible  <bruno@clisp.org>

	Modernize: Convert source code from K&R C to ANSI C.
	* arilev1c.d: Convert to ANSI C.

2017-11-25  Bruno Haible  <bruno@clisp.org>

	More systematic Makefile.devel target naming.
	* Makefile.devel (build-porting*-ari_asm): Renamed from
	build-porting*-ari-asm.

2017-11-25  Bruno Haible  <bruno@clisp.org>

	More systematic naming of ari* assembly-language files.
	* ari_asm_i386.d: Renamed from ari80386.d.
	* ari_asm_arm.d: Renamed from ariarm.d.
	* ari_asm_hppa.d: Renamed from arihppa.d.
	* ari_asm_mips.d: Renamed from arimips.d.
	* ari_asm_mips64.d: Renamed from arimips64.d.
	* ari_asm_sparc.d: Renamed from arisparc.d.
	* ari_asm_sparc64.d: Renamed from arisparc64.d.
	* arilev1.d: Update accordingly.
	* makemake.in (ARI_ASMD, ARI_ASMS): Likewise.
	* Makefile.devel (src/ari_asm_i386.msvc.c): Renamed from
	src/ari80i386.msvc.c.

2017-11-25  Bruno Haible  <bruno@clisp.org>

	More systematic naming of sp* assembly-language files.
	* sp_asm_m68k.d: Renamed from sp68000.d.
	* sp_asm_sparc.d: Renamed from spsparc.d.
	* sp_asm_sparc64.d: Renamed from spsparc64.d.
	* sp_asm_mips.d: Renamed from spmips.d.
	* sp_asm_i386.d: Renamed from sp80386.d.
	* makemake.in (SP_ASMD, SP_ASMS): Update accordingly.
	* Makefile.devel (src/sp_asm_i386.msvc.c): Renamed from
	src/sp80i386.msvc.c.

2017-11-25  Bruno Haible  <bruno@clisp.org>

	Fix build failure of build-porting32-gcc-arilev0-asm on Linux/sparc.
	* makemake.in: When compiling eval.c with GCC for sparc, reduce
	optimizations.

2017-11-25  Bruno Haible  <bruno@clisp.org>

	Make it possible to use '-nextgc-factor 0.001' with GENERATIONAL_GC.
	* spvw.d (main): Move install_segv_handler invocation from here...
	(init_memory): ... to here.

2017-11-21  Sam Steingold  <sds@gnu.org>

	Avoid gcc/clang warnings -Wformat
	* spvw_global.d (check_gc_consistency, check_gc_consistency_2):
	Cast format arguments to (unsigned long).
	* spvw_sigsegv.d (print_mem_stats): Likewise.
