@@ -1,5 +1,14 @@
 2017-11-25  Bruno Haible  <bruno@clisp.org>
 
+	Provide a starting point for ari_asm_* development.
+	* arilev1c.d: Use 'maybe_local' instead of 'local'.
+	* arilev1.d (LOOP_STATIC_C): Renamed from LOOP_EXTERN_C.
+	(LOOP_EXTERN_C): New macro. Define maybe_local.
+	* arilev1_asm_proto.d: New file.
+	* makemake.in (EXTRA_CPARTS): Add arilev1_asm_proto.
+
+2017-11-25  Bruno Haible  <bruno@clisp.org>
+
 	Modernize: Convert source code from K&R C to ANSI C.
 	* arilev1c.d: Convert to ANSI C.
 
